# ferrugo

./: .gitignore  .release-please-config.json  .release-please-manifest.json  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: publish.yml
baselines/examples/: malformed-pdfium-error.json  text-page-metadata-comparison.json  text-page-pdfium-success.json
crates/ferrugo-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrugo-cli/src/: main.rs
crates/ferrugo-content/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrugo-content/src/: lib.rs
crates/ferrugo-native/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrugo-native/src/: lib.rs
crates/ferrugo-object/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrugo-object/src/: lib.rs
crates/ferrugo-pdfium/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrugo-pdfium/examples/: smoke.rs
crates/ferrugo-pdfium/src/: lib.rs
crates/ferrugo-render/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrugo-render/src/: lib.rs
crates/ferrugo-syntax/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrugo-thumbnail/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrugo-wasm-smoke/: Cargo.toml
crates/ferrugo-wasm-smoke/src/: lib.rs
crates/pdfrust-cli/: Cargo.toml
crates/pdfrust-cli/src/: main.rs
crates/pdfrust-content/: Cargo.toml
crates/pdfrust-content/src/: lib.rs
crates/pdfrust-native/: Cargo.toml
crates/pdfrust-native/src/: lib.rs
crates/pdfrust-object/: Cargo.toml
crates/pdfrust-object/src/: lib.rs
crates/pdfrust-pdfium/: Cargo.toml
crates/pdfrust-pdfium/examples/: smoke.rs
crates/pdfrust-pdfium/src/: lib.rs
crates/pdfrust-render/: Cargo.toml
crates/pdfrust-render/src/: lib.rs
crates/pdfrust-syntax/: Cargo.toml
crates/pdfrust-thumbnail/: Cargo.toml
crates/pdfrust-wasm-smoke/: Cargo.toml
crates/pdfrust-wasm-smoke/src/: lib.rs
docs/: README.md  baselines.md  benchmarks.md  corpus-taxonomy.md  errors.md  fixtures.md  fuzzing.md  packaging.md  roadmap.md
docs/architecture/: rust-native-crates.md
docs/backend/: native.md  pdfium.md
docs/backlogs/: native-renderer-api-cleanup-backlog.md  native-renderer-conformance-backlog.md  pdf-2-0-feature-priority-backlog.md  pdfium-free-maintenance-backlog.md  reference-oracle-tooling-backlog.md
docs/concepts/: 2026-06-24-node-api-surface.md  2026-06-24-pdfium-port-strategy.md
docs/decisions/: 0001-rust-first-pdfium-guided-porting.md  0002-timeout-and-process-isolation.md  0003-ferrugo-project-name.md  0004-bidirectional-and-shaped-text-policy.md  0005-color-management-and-output-intent-policy.md  0006-specialized-image-codec-policy.md  0007-server-side-rust-native-runtime-scope.md  0008-reference-renderers-as-maintainer-oracles.md  0009-reports-and-adrs-over-completed-milestone-plans.md
docs/guides/: native-only-consumer-migration.md
docs/measurements/: pdfium-build-baseline.md
docs/milestones/: 0001-milestone-tracking-structure.md  0002-research-and-porting-baseline.md  0003-phase-0-decision-baseline.md  0004-license-files-and-attribution-policy.md  0005-pdfium-source-checkout-recipe.md  0006-minimal-pdfium-gn-configuration.md  0007-pdfium-build-measurement-baseline.md  0008-fixture-policy-and-seed-fixtures.md  0009-rust-workspace-skeleton.md  0010-thumbnail-api-facade.md  0011-pdfium-backend-linkage.md  0012-render-page-zero-to-rgba.md  0013-png-output-cli.md  0014-error-taxonomy-mapping.md  0015-differential-baseline-format.md  0016-phase-0-report-and-pivot-decision.md  0017-run-local-pdfium-build.md  0018-live-thumbnail-fixture-render.md  0019-timeout-and-isolation-decision.md  0020-child-process-render-runner.md  0021-rust-native-crate-layout.md  0022-byte-input-and-offset-errors.md  0023-pdf-primitive-parser.md  0024-indirect-objects-and-references.md  0025-classic-xref-and-trailer-loader.md  0026-streams-and-basic-filters.md  0027-xref-streams-and-object-streams.md  0028-catalog-and-page-tree.md  0029-rust-backend-differential-harness.md  0030-content-stream-tokenizer.md  (+193 more)
fixtures/: .gitignore  academic-publisher-manifest.tsv  annotation-popup-stamp-freetext-manifest.tsv  annotation-print-preview-manifest.tsv  archival-pdfa-manifest.tsv  browser-print-edge-manifest.tsv  business-document-manifest.tsv  chart-dashboard-manifest.tsv  color-managed-print-preview-manifest.tsv  corpus-manifest.tsv  corrupt-recovery-manifest.tsv  cross-producer-fusion-manifest.tsv  cross-producer-fusion-matrix.tsv  e-signature-workflow-manifest.tsv  email-web-archive-manifest.tsv  financial-document-manifest.tsv  font-cache-compaction-manifest.tsv  font-fallback-script-mixing-manifest.tsv  font-subset-manifest.tsv  form-appearance-mutation-manifest.tsv  form-filling-flattening-manifest.tsv  government-form-manifest.tsv  high-dpi-preview-manifest.tsv  high-page-count-batch-manifest.tsv  image-codec-deployment-manifest.tsv  image-heavy-memory-manifest.tsv  incremental-memory-budget-manifest.tsv  incremental-preview-manifest.tsv  layout-stress-manifest.tsv  legal-document-manifest.tsv  local-corpus.example.toml  long-document-navigation-manifest.tsv  longform-text-manifest.tsv  low-end-reliability-profile-matrix.tsv  low-memory-profile-manifest.tsv  map-rendering-manifest.tsv  mixed-vector-raster-transparency-manifest.tsv  mobile-scan-manifest.tsv  object-cache-fusion-manifest.tsv  office-chart-vector-effects-manifest.tsv  (+24 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: content_tokenize.rs  primitive_parse.rs  render_setup.rs  stream_decode.rs  xref_load.rs
fuzz/src/: lib.rs
scripts/: check_crate_publish_ready.sh  check_cross_producer_fusion_corpus.sh  check_fuzz_smoke.sh  check_low_end_reliability_matrix.sh  check_native_only_release.sh  check_pdfium_quarantine.sh  check_performance_claims.sh  check_performance_matrix_smoke.sh  check_plugin_free_distribution.sh  check_scheduler_tuning_matrix.sh  check_unsupported_feature_sla.sh  check_wasm_smoke.sh  generate_corpus_dashboard.sh  generate_coverage_scorecard.sh  generate_fixtures.py  generate_performance_matrix.sh  measure_serverless_profile.sh  publish_crates.sh  wasm_smoke.mjs
(+199 files in other folders)
