[workspace]
members = [
    "crates/pdfrust-cli",
    "crates/pdfrust-content",
    "crates/pdfrust-native",
    "crates/pdfrust-object",
    "crates/pdfrust-pdfium",
    "crates/pdfrust-render",
    "crates/pdfrust-syntax",
    "crates/pdfrust-thumbnail",
    "crates/pdfrust-wasm-smoke",
]
resolver = "2"
default-members = [
    "crates/pdfrust-cli",
    "crates/pdfrust-content",
    "crates/pdfrust-native",
    "crates/pdfrust-object",
    "crates/pdfrust-render",
    "crates/pdfrust-syntax",
    "crates/pdfrust-thumbnail",
]

[workspace.package]
edition = "2021"
description = "Rust-native PDF thumbnail and rendering components."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pdfrust/pdfrust"
rust-version = "1.81"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = "deny"
perf = "deny"

[profile.serverless]
inherits = "release"
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "symbols"
