[workspace]
members = [
    "crates/ferrugo-cli",
    "crates/ferrugo-content",
    "crates/ferrugo-native",
    "crates/ferrugo-object",
    "crates/ferrugo-pdfium",
    "crates/ferrugo-render",
    "crates/ferrugo-syntax",
    "crates/ferrugo-thumbnail",
    "crates/ferrugo-wasm-smoke",
]
resolver = "2"
default-members = [
    "crates/ferrugo-cli",
    "crates/ferrugo-content",
    "crates/ferrugo-native",
    "crates/ferrugo-object",
    "crates/ferrugo-render",
    "crates/ferrugo-syntax",
    "crates/ferrugo-thumbnail",
]

[workspace.package]
edition = "2021"
description = "Rust-native PDF thumbnail and rendering components."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sebastian-software/ferrugo"
rust-version = "1.81"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = "deny"
perf = "deny"

[profile.serverless]
inherits = "release"
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
codegen-units = 1
debug = "full"
lto = false
split-debuginfo = "packed"
strip = "none"
