[package]
name = "ferrugo-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
ferrugo-content = { path = "../crates/ferrugo-content" }
ferrugo-native = { path = "../crates/ferrugo-native" }
ferrugo-object = { path = "../crates/ferrugo-object" }
ferrugo-syntax = { path = "../crates/ferrugo-syntax" }
ferrugo-thumbnail = { path = "../crates/ferrugo-thumbnail" }

[[bin]]
name = "primitive_parse"
path = "fuzz_targets/primitive_parse.rs"

[[bin]]
name = "xref_load"
path = "fuzz_targets/xref_load.rs"

[[bin]]
name = "stream_decode"
path = "fuzz_targets/stream_decode.rs"

[[bin]]
name = "content_tokenize"
path = "fuzz_targets/content_tokenize.rs"

[[bin]]
name = "render_setup"
path = "fuzz_targets/render_setup.rs"
