[package]
name = "ferrugo-content"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ferrugo-object = { version = "0.1.0", path = "../ferrugo-object" }
ferrugo-syntax = { version = "0.1.0", path = "../ferrugo-syntax" }

[lints]
workspace = true
