[package]
name = "ferrugo-native"
version = "0.1.0"
edition.workspace = true
description = "Rust-native PDF thumbnail backend for Ferrugo."
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["pdf", "thumbnail", "renderer", "rust"]
include = ["src/**", "Cargo.toml", "README.md"]

[dependencies]
ferrugo-content = { version = "0.1.0", path = "../ferrugo-content" }
ferrugo-object = { version = "0.1.0", path = "../ferrugo-object" }
ferrugo-render = { version = "0.1.0", path = "../ferrugo-render" }
ferrugo-syntax = { version = "0.1.0", path = "../ferrugo-syntax" }
ferrugo-thumbnail = { version = "0.1.0", path = "../ferrugo-thumbnail" }

[lints]
workspace = true
