[package]
name = "ferrugo-object"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
ferrugo-syntax = { version = "0.1.0", path = "../ferrugo-syntax" }

[lints]
workspace = true
