[package]
name = "ferrugo-pdfium"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ferrugo-thumbnail = { version = "0.1.0", path = "../ferrugo-thumbnail" }

[lints]
workspace = true
