[package]
name = "ferrugo-render"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ferrugo-content = { version = "0.1.0", path = "../ferrugo-content" }
ferrugo-object = { version = "0.1.0", path = "../ferrugo-object" }
ferrugo-syntax = { version = "0.1.0", path = "../ferrugo-syntax" }
ferrugo-thumbnail = { version = "0.1.0", path = "../ferrugo-thumbnail" }
ttf-parser = { version = "0.25.1", default-features = false, features = ["std"] }
zune-jpeg = { version = "0.5.15", default-features = false, features = ["std"] }

[dev-dependencies]

[lints]
workspace = true
