[package]
name = "ferrugo-render"
version = "0.1.0"
edition.workspace = true
description = "Display-list and raster rendering primitives for Ferrugo."
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["pdf", "rendering", "raster", "graphics"]
include = ["src/**", "Cargo.toml", "README.md"]

[dependencies]
ferrugo-content = { version = "0.1.0", path = "../ferrugo-content" }
ferrugo-object = { version = "0.1.0", path = "../ferrugo-object" }
ferrugo-syntax = { version = "0.1.0", path = "../ferrugo-syntax" }
ferrugo-thumbnail = { version = "0.1.0", path = "../ferrugo-thumbnail" }
ttf-parser = { version = "0.25.1", default-features = false, features = ["std"] }
zune-jpeg = { version = "0.5.15", default-features = false, features = ["std"] }

[dev-dependencies]

[lints]
workspace = true
