[package]
name = "ferrugo-syntax"
version = "0.1.0"
edition.workspace = true
description = "Low-level borrowed PDF byte syntax primitives for Ferrugo."
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["pdf", "parser", "syntax", "rust"]
include = ["src/**", "Cargo.toml", "README.md"]

[lints]
workspace = true
