[package]
name = "pdfrust-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pdfrust-native = { path = "../pdfrust-native" }
pdfrust-pdfium = { path = "../pdfrust-pdfium", optional = true }
pdfrust-thumbnail = { path = "../pdfrust-thumbnail" }

[features]
default = []
pdfium = ["dep:pdfrust-pdfium"]

[lints]
workspace = true
