[package]
name = "pdfrust-cli"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pdfrust-native = { version = "0.1.0", path = "../pdfrust-native" }
pdfrust-pdfium = { version = "0.1.0", path = "../pdfrust-pdfium", optional = true }
pdfrust-thumbnail = { version = "0.1.0", path = "../pdfrust-thumbnail" }

[features]
default = []
pdfium = ["dep:pdfrust-pdfium"]

[lints]
workspace = true
