[package]
name = "pdfrust-object"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = "1.1.9"
pdfrust-syntax = { version = "0.1.0", path = "../pdfrust-syntax" }

[lints]
workspace = true
