[package]
name = "pdfrust-pdfium"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pdfrust-thumbnail = { version = "0.1.0", path = "../pdfrust-thumbnail" }

[lints]
workspace = true
