[package]
name = "pdfrust-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pdfrust-content = { path = "../pdfrust-content" }
pdfrust-syntax = { path = "../pdfrust-syntax" }
pdfrust-thumbnail = { path = "../pdfrust-thumbnail" }

[dev-dependencies]
pdfrust-object = { path = "../pdfrust-object" }

[lints]
workspace = true
