[package]
name = "pdfrust-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pdfrust-content = { path = "../pdfrust-content" }
pdfrust-object = { path = "../pdfrust-object" }
pdfrust-syntax = { path = "../pdfrust-syntax" }
pdfrust-thumbnail = { path = "../pdfrust-thumbnail" }
ttf-parser = { version = "0.25.1", default-features = false, features = ["std"] }
zune-jpeg = { version = "0.5.15", default-features = false, features = ["std"] }

[dev-dependencies]

[lints]
workspace = true
