[package]
name = "pdfrust-render"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pdfrust-content = { version = "0.1.0", path = "../pdfrust-content" }
pdfrust-object = { version = "0.1.0", path = "../pdfrust-object" }
pdfrust-syntax = { version = "0.1.0", path = "../pdfrust-syntax" }
pdfrust-thumbnail = { version = "0.1.0", path = "../pdfrust-thumbnail" }
ttf-parser = { version = "0.25.1", default-features = false, features = ["std"] }
zune-jpeg = { version = "0.5.15", default-features = false, features = ["std"] }

[dev-dependencies]

[lints]
workspace = true
